# MML_Visualizers

./: .gitignore  AGENTS.md  MML_Visualizers.sln  README.md  build_all.sh
.beads/: issues.jsonl
FLTK/: BUILD.md  CMakeLists.txt  INSTALL_AND_RUN.md  LINUX_INSTALL.md  MACOS_BUILD.md  MML_CMakeLists.txt  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  run_parametric_curve2d.sh  run_particle_visualizer2d.sh  run_real_function.sh  run_vector_field2d.sh  update_apps.ps1  update_apps.sh  visualize_data.py
FLTK/MML_ParametricCurve2D_Visualizer/: AxisTickCalculator.cpp  AxisTickCalculator.h  CMakeLists.txt  GraphWidget.cpp  GraphWidget.h  LegendWidget.cpp  LegendWidget.h  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  README.md  main.cpp
FLTK/MML_ParticleVisualizer2D/: CMakeLists.txt  LegendWidget.cpp  LegendWidget.h  MMLData.cpp  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  README.md  SimulationWidget.cpp  SimulationWidget.h  main.cpp
FLTK/MML_RealFunctionVisualizer/: .gitignore  AxisTickCalculator.h  BUILD_TEST_SUMMARY.md  CMakeLists.txt  GraphWidget.cpp  GraphWidget.h  INSTALL_FLTK.md  LegendWidget.cpp  LegendWidget.h  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  build.bat  main.cpp  run.sh  run_all_tests.bat  test.bat
FLTK/MML_VectorField2D_Visualizer/: CMakeLists.txt  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  README.md  VectorFieldWidget.cpp  VectorFieldWidget.h  main.cpp
MML_ParametricCurve2D_Visualizer/: App.xaml.cs  ParamCurve2D_MainWindow.xaml
MML_ParametricCurve3D_Visualizer/: App.xaml
MML_ParametricCurve3D_Visualizer/Properties/: launchSettings.json
MML_ParametricCurveVisualizer/: App.xaml  App.xaml.cs  MML_ParametricCurveVisualizer.csproj  MainWindow.xaml  MainWindow.xaml.cs  ParamCurve3D_MainWindow.xaml  ParamCurveMainWindow.xaml  ParamCurveMainWindow.xaml.cs
MML_ParametricCurveVisualizer/Properties/: launchSettings.json
MML_ParticleVisualizer2D/: App.xaml.cs  ParticleVisualizer2D_MainWindow.xaml.cs
MML_RealFunctionVisualizer/: App.xaml  MML_RealFunctionVisualizer.csproj  MainWindow.xaml  MainWindow.xaml.cs  MultiLoadedFunction.cs  RealFunctionMainWindow.xaml  RealFunctionMainWindow.xaml.cs  SingleLoadedFunction.cs  Utils.cs
MML_RealFunctionVisualizer/Properties/: launchSettings.json
MML_ScalarFunction2D_Visualizer/: App.xaml  ScalarFunc2D_MainWindow.xaml  ScalarFunc2D_MainWindow.xaml.cs
MML_ScalarFunction2Visualizer/: App.xaml  App.xaml.cs  MML_ScalarFunction2Visualizer.csproj  MainWindow.xaml  MainWindow.xaml.cs  ScalarFunc2MainWindow.xaml  ScalarFunc2MainWindow.xaml.cs
MML_ScalarFunction2Visualizer/Properties/: launchSettings.json
MML_ScalarFunction3D_Visualizer/: App.xaml  MML_ScalarFunction3D_Visualizer.csproj
MML_ScalarFunction3Visualizer/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  ScalarFunc3D_MainWindow.xaml  ScalarFunc3MainWindow.xaml.cs
MML_VectorField2D_Visualizer/: VectorField2D_MainWindow.xaml.cs
MML_VectorField3D_Visualizer/: App.xaml
MML_VectorFieldVisualizer/: App.xaml  App.xaml.cs  Calc3D.cs  Geometries.cs  MainWindow.xaml  MainWindow.xaml.cs  VecRepr.cs  VectorFieldMainWindow.xaml  VectorFieldMainWindow.xaml.cs
MML_VectorFieldVisualizer/Properties/: launchSettings.json
MML_WorldVisualizer/: FileName.txt  MainWindow.xaml  MainWindow.xaml.cs
Qt/: README_LINUX.md  SETUP_COMPLETE.md  build_all.sh  qt_run_wrapper.sh  run_menu.sh  run_parametric_curve3d.sh  run_particle_visualizer3d.sh  run_real_function.sh  run_scalar_function2d.sh  run_vector_field3d.sh  test_all.sh  update_apps.ps1  update_apps.sh
Qt/MML_ParametricCurve2D_Visualizer/: AxisTickCalculator.h  CMakeLists.txt  GLWidget.cpp  GLWidget.h  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  MainWindow.cpp  MainWindow.h  README.md  build.bat  main.cpp
Qt/MML_ParametricCurve3D_Visualizer/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  MainWindow.cpp  MainWindow.h  README.md  build.bat  main.cpp
Qt/MML_ParticleVisualizer2D/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  (+4 more)
Qt/MML_ParticleVisualizer3D/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  MainWindow.cpp  MainWindow.h  README.md  build.bat  main.cpp  run.bat
Qt/MML_RealFunctionVisualizer/: AxisTickCalculator.h  CMakeLists.txt  GLWidget.cpp  GLWidget.h  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  MainWindow.cpp  MainWindow.h  README.md  build.bat  main.cpp
Qt/MML_ScalarFunction2D_Visualizer/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  MainWindow.cpp  MainWindow.h  main.cpp  run.bat
Qt/MML_VectorField3D_Visualizer/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MMLData.h  MMLFileParser.cpp  MMLFileParser.h  MainWindow.cpp  MainWindow.h  run.bat
Testing/octplot/: AUTHORS  ChangeLog  Makefile  NEWS  README  README.in  ReleaseNotes.txt  THANKS  aclocal.m4  config.h  configh.in  configure  configure.in  reconf
Testing/octplot/doc/: Doxyfile  Makefile  Makefile.am  Makefile.in
Testing/octplot/m4/: Makefile  Makefile.am  Makefile.in
Testing/octplot/src/: Makefile.in  __plt__.m  __pltopt__.m  axes.cpp  axes.h  axes.m  axes_props.m  axis.m  caselessless.cpp  caselessless.h  cla.m  clf.m  contour.m  contourc.m  contourl.cc  figure.cpp  figure.h  figure.m  figure_props.m  figurewindow.cpp  figurewindow.h  freqz_plot.m  gca.m  gcf.m  get.m  gl2ps.c  gl2ps.h  globals.h  gnuplot_warn.m  grid.m  hold.m  ishold.m  line.cpp  line.h  line.m  line_overlap.m  line_props.m  loglog.m  object.cpp  object.h  (+30 more)
WPF/: MML_Visualizers.sln  update_apps.ps1
data/: ScalarFunction2D  VectorFieldVisualizer3D
history/: SESSION_2025-12-12_05_QT_CROSS_PLATFORM_VISUALIZER_COLLECTION_COMPLETE.md  session_2025-12-12_07_qt_visualizers_linux_port.md  session_2025-12-12_Qt_2D_visualizers_complete.md  session_2025-12-12_deployment-automation_04.md  session_2025-12-12_initial-project-setup.md  session_2025-12-12_qt-particle-visualizer-3d_03.md  session_2025-12-12_qt-realfunction-visualizer.md
(+291 files in other folders)
